--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
   </head>
   <body>
-    <script src="sketchPlanets.js"></script>
+    <script src="sketchPlanets__VR_.js"></script>
   </body>
 </html>
