--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   </head>
   <body>
-    <P>19:49</P>
+    <P> Versão 09-11-21:10</P>
     <script src="sketchPlanets__VR_.js"></script>
   </body>
 </html>
